--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport": "^0.5.0",
     "passport-discord": "^0.1.4",
     "ts-node": "^10.3.1",
+    "tsc": "^2.0.3",
     "typescript": "^4.4.4",
     "yarn": "^1.22.17"
   },
