--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node build/dist/index.js",
+    "heroku-prebuild": "yarn install",
     "build": "tsc -p .",
     "dev": "nodemon --exec ts-node src/index.ts"
   },
@@ -26,7 +27,6 @@
     "passport": "^0.5.0",
     "passport-discord": "^0.1.4",
     "ts-node": "^10.3.1",
-    "tsc": "^2.0.3",
     "typescript": "^4.4.4",
     "yarn": "^1.22.17"
   },
