--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/GarinMcCullick/AgencyBackend#readme",
   "dependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/passport-discord": "^0.1.5",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
