--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^5.13.8",
     "passport": "^0.5.0",
     "passport-discord": "^0.1.4",
+    "serve": "^13.0.2",
     "ts-node": "^10.3.1",
     "typescript": "^4.4.4",
     "yarn": "^1.22.17"
